Fix btracec modules problems